--- a/main.tex
+++ b/main.tex
@@ -20,16 +20,18 @@
 
 \maketitle
 
-\tableofcontents
+\chapter*{Foreword}
 
-\chapter{Introduction}
+%\chapter{Introduction}
 This document contains some helpful commands that can be used in git.
+
+\tableofcontents
 
 \chapter{Setup}
 
 \section{General settings}
 
-\subsubsection{Changing the user and their options}
+\subsection{Changing the user and their options}
 
 On your PC/Mac:
 \begin{verbatim}
@@ -48,13 +50,13 @@ Go to Account\textgreater  Account Settings and add the email address. Confirm t
 On GitHub:
 Go to Settings\textgreater  Emails and add the email address. Confirm the address by opening the email that you received in your mailbox. Choose a primary email address(, which is the one that is going to show up in your commits). OBS: Make sure that you did not mark the "Keep my email address private"-option. The name (that will actually show up in your commits) can be changed in your GitHub profile.
 
-\subsubsection{.gitignore}
+\subsection{.gitignore}
 In many cases, you will have files in your local repository that you do not want to have committed because they are not useful, they are experimental or too big. In those cases you might want to create a .gitignore file in your folder and commit it to the repository. Git will know automatically that all the fields that are listed in the .gitignore file are not supposed to be tracked for changes.
 
 \section{Cross-platform text documents}
 In case you want to version control a text document with GitHub, follow this tutorial.
 
-\subsubsection{Starting in Overleaf}
+\subsection{Starting in Overleaf}
 Start in Overleaf, then push it to GitHub, and download from GitHub to your computer
 ($Overleaf \rightarrow GitHub \rightarrow PC/Mac$).
 
@@ -71,7 +73,7 @@ git clone <path/to/github/repository> <folder>
     (If no folder is specified, it will take the repository name as default name.)
 \end{enumerate}
 
-\subsubsection{Starting on GitHub}
+\subsection{Starting on GitHub}
 Start on GitHub, then pull it from Overleaf and your PC/Mac
 ($Overleaf \leftarrow GitHub \rightarrow PC/Mac$).
 
@@ -96,7 +98,7 @@ git clone <url-to-repository> <path/name/of/folder>
     \item Choose the repository you want to import.
 \end{enumerate}
 
-\subsubsection{Starting on your PC/Mac}
+\subsection{Starting on your PC/Mac}
 Start on your PC/Mac, then push to GitHub, and pull it from GitHub from Overleaf
 ($PC/Mac \rightarrow GitHub \rightarrow Overleaf$).
 
@@ -157,7 +159,9 @@ git remote rename new-origin origin
 
 Before committing new code, always make sure to update your local version from origin first!
 
-\subsubsection{From Overleaf}
+\section{Cross-platform text documents}
+
+\subsection{From Overleaf}
 
 \begin{enumerate}[noitemsep]
     \item Make your changes and save with Ctrl + s / Cmd + s.
@@ -165,7 +169,7 @@ Before committing new code, always make sure to update your local version from o
     \item Choose the GitHub option in the menu and choose "Push Overleaf changes to GitHub". Write a comment and commit.
 \end{enumerate}
 
-\subsubsection{From your PC/Mac}
+\subsection{From your PC/Mac}
 All commands can be done from the command line after navigating to the folder containing the git repository:
 \begin{verbatim}
 cd <path\to\github\repository>
@@ -218,7 +222,7 @@ git difftool HEAD
 git difftool --staged
 \end{verbatim}
 
-\subsubsection{FileMerge on Mac}
+\subsection{FileMerge on Mac}
 If you are doing this for the first time, you might have to set up an appropritate diff tool.
 On Mac, you might want to use FileMerge that is already included on most MacOs's following \href{https://stackoverflow.com/questions/21486481/is-it-possible-to-view-git-diffs-using-a-gui-side-by-side-tool-on-mac}{these easy steps}:
 \begin{enumerate}[noitemsep]
@@ -236,7 +240,7 @@ git config --global diff.tool opendiff
     \end{verbatim}	
 \end{enumerate}
 
-\subsubsection{TortoiseGit on PC}
+\subsection{TortoiseGit on PC}
 On PC, you might want use Tortoise following \href{https://gist.github.com/ellisda/25cdd92129c5b44406ab}{these easy steps}:
 \begin{enumerate}[noitemsep]
     \item Download and install \href{https://tortoisegit.org/download}{TortoiseGit}.
