Moved chapters into individual text *.md files.

--- a/main.tex
+++ b/main.tex
@@ -28,394 +28,29 @@ This document contains some helpful commands that can be used in git.
 
 \tableofcontents
 
+%% Setup %%
 \chapter{Setup}
 
-\section{General settings}
+\input{setup.md}
 
-\subsection{Changing the user and their options}
-
-On your PC/Mac:
-\begin{verbatim}
-git config --global user.email "email@example.com"
-got config --global user.name "John Doe"
-\end{verbatim}
-You can check that everything has been set correctly by typing
-\begin{verbatim}
-got config --global user.name
-\end{verbatim}
-
-On Overleaf:
-Go to Account{\textgreater}Account Settings and add the email address. Confirm the address by opening the email that you received in your mailbox.
-
-On GitHub:
-Go to Settings\textgreater  Emails and add the email address. Confirm the address by opening the email that you received in your mailbox. Choose a primary email address(, which is the one that is going to show up in your commits). OBS: Make sure that you did not mark the "Keep my email address private"-option. The name (that will actually show up in your commits) can be changed in your GitHub profile.
-
-\subsection{.gitignore}
-In many cases, you will have files in your local repository that you do not want to have committed because they are not useful, they are experimental or too big. In those cases you might want to create a .gitignore file in your folder and commit it to the repository. Git will know automatically that all the fields that are listed in the .gitignore file are not supposed to be tracked for changes.
-
-\section{Cross-platform text documents}
-In case you want to version control a text document with GitHub, follow this tutorial.
-
-\subsection{Starting in Overleaf}
-Start in Overleaf, then push it to GitHub, and download from GitHub to your computer
-($Overleaf \rightarrow GitHub \rightarrow PC/Mac$).
-
-\begin{enumerate}[noitemsep]
-    \item Make a new project in Overleaf.
-    \item Choose the GitHub option in the menu and choose "Create a GitHub repository". Choose a name and add a description if wanted.
-    \item Choose the GitHub option in the menu and choose "Push Overleaf changes to GitHub".
-    \item Switch to your GitHub account and check if everything showed up correctly.
-    \item Open a terminal on your computer, create and navigate to the folder in which you want to clone the repository.
-    \item Obtain the url to the repository on the GitHub page under "Clone or download" and write the following lines in the terminal: 
-    \begin{verbatim}
-git clone <path/to/github/repository> <folder>
-    \end{verbatim}
-    (If no folder is specified, it will take the repository name as default name.)
-\end{enumerate}
-
-\subsection{Starting on GitHub}
-Start on GitHub, then pull it from Overleaf and your PC/Mac
-($Overleaf \leftarrow GitHub \rightarrow PC/Mac$).
-
-\begin{enumerate}[noitemsep]
-    \item Make a new repository on GitHub.
-    \item Copy the repository address on GitHub.
-    \item On your PC/Mac, navigate to the folder where you want to have the repository (or its parent folder).
-    \item Clone the GitHub repository into a new folder with the name of the git repository or into a specified folder:
-    \begin{verbatim}
-git clone <url-to-repository>
-git clone <url-to-repository> <path/name/of/folder>
-    \end{verbatim}
-    \item Get all branches and tags:
-    \begin{verbatim}
-#git fetch origin
-    \end{verbatim}
-    \item Check that all branches have been fetched:
-    \begin{verbatim}
-#git branch -a
-    \end{verbatim}
-    \item Go to Overleaf and chose "Import from GitHub" under "New Project".
-    \item Choose the repository you want to import.
-\end{enumerate}
-
-\subsection{Starting on your PC/Mac}
-Start on your PC/Mac, then push to GitHub, and pull it from GitHub from Overleaf
-($PC/Mac \rightarrow GitHub \rightarrow Overleaf$).
-
-\begin{enumerate}[noitemsep]
-    \item Create a new project on you PC/Mac:
-    \begin{verbatim}
-git init
-    \end{verbatim}
-    \item Add files, make changes, commit to local repository.
-    \item Create a new and empty repository on GitHub. (No README file!)
-    \item Copy repository address.
-    \item Navigate to the git repository folder on your computer. 
-    \item Remove existing origins from the repository:
-    \begin{verbatim}
-git remote rm origin
-    \end{verbatim}
-    \item Add the GitHub repository as a new origin to your local repository on your PC/Mac:
-    \begin{verbatim}
-git remote add origin <url-to-repository>
-    \end{verbatim}
-    \item Push all changes from your PC/Mac to GitHub including all branches and flags:
-    \begin{verbatim}
-git push --all origin
-git push --tags origin
-    \end{verbatim}
-    \item Go to Overleaf and chose "Import from GitHub" under "New Project".
-    \item Choose the repository you want to import.
-\end{enumerate}
-
-If you want to migrate a repository from an existing remote to a new remote, you can use the following commands (based on \href{https://gist.github.com/niksumeiko/8972566}{the following tutorial}):
-Move repository from Cloudforge to Github.
-\begin{enumerate}[noitemsep]
-    \item Open a terminal and go to the folder the repository is located in.
-    \item Add a new remote origin:
-    \begin{verbatim}
-git remote add new-origin <path-to-new-repository>
-    \end{verbatim}
-    \item Push all branches and tags to the new repository:
-    \begin{verbatim}
-git push --all new-origin
-git push --tags new-origin
-    \end{verbatim}
-    \item Show existing remotes
-    \begin{verbatim}
-git remote -v
-    \end{verbatim}
-    \item Remove old remote repository:
-    \begin{verbatim}
-git remote rm origin
-    \end{verbatim} 
-    \item Rename new remote repository to origin
-    \begin{verbatim}
-git remote rename new-origin origin
-    \end{verbatim}
-\end{enumerate}
-
+%% Maintaining the code %%
 \chapter{Maintaining the code}
 
-Before committing new code, always make sure to update your local version from origin first!
+\input{maintenance.md}
 
-\section{Cross-platform text documents}
-
-\subsection{From Overleaf}
-
-\begin{enumerate}[noitemsep]
-    \item Make your changes and save with Ctrl + s / Cmd + s.
-    \item Update your Overleaf repository from origin by choosing the GitHub option in the menu and choosing "Pull GitHub changes into Overleaf".
-    \item Choose the GitHub option in the menu and choose "Push Overleaf changes to GitHub". Write a comment and commit.
-\end{enumerate}
-
-\subsection{From your PC/Mac}
-All commands can be done from the command line after navigating to the folder containing the git repository:
-\begin{verbatim}
-cd <path\to\github\repository>
-\end{verbatim}
-
-\begin{enumerate}[noitemsep]
-    \item Make your changes and save them.
-    \item Update your local repository from origin:
-    \begin{verbatim}
-git pull   
-    \end{verbatim}
-    \item Stage the file(s) that have changes.
-    \begin{verbatim}
-git add <name-of-file>
-    \end{verbatim}
-    \item Commit the changes to the local repository with a change comment:
-    \begin{verbatim}
-git commit -m "Some useful and readable comment."
-    \end{verbatim}
-    \item Push the changes to origin.
-    \begin{verbatim}
-git push
-    \end{verbatim}
-\end{enumerate}
-
-\section{General commands}
-
-\subsection{Renaming version-controlled files}
-If we want to change the name of a version-controlled document whil still preserving the history of its content, we can use the following command:
-\begin{verbatim}
-git mv old_filename new_filename
-\end{verbatim}
-Then, commit and push the changes as always.
-
-
+%% Diffs and conflicts %%
 \chapter{Diffs and conflicts}
-In some cases, it is very helpful to see differences between specific commits and/or the current version of the repository.
-Likewise, it is very normal that you will encounter some conflicts while working on a projects with multiple contributors. Don't worry and follow these steps.
 
-\section{Tools}
-When comparing two states in git, we can use the default commands to get a patch of the main changes:
-\begin{verbatim}
-git diff
-git diff <sha-1> <sha-2>
-\end{verbatim}
-If you have add the changes already you will have to call the following command:
-\begin{verbatim}
-git diff HEAD
-\end{verbatim}
-This is very helpful, if we want to send a patch to a co-worker, for example.
+\input{merge.md}
 
-However, this might be very clunky in some settings because we do not get a smoot visual representation of the changes. Thus, we might use common diff tools to visualize changes like TortoiseGit (Win), FileMerge (Mac) by using the following commands:
-\begin{verbatim}
-git difftool
-git difftool <sha-1> <sha-2>
-\end{verbatim}
-If you have add the changes already you will have to call the following command:
-\begin{verbatim}
-git difftool HEAD
-git difftool --staged
-\end{verbatim}
-
-\subsection{FileMerge on Mac}
-If you are doing this for the first time, you might have to set up an appropritate diff tool.
-On Mac, you might want to use FileMerge that is already included on most MacOs's following \href{https://stackoverflow.com/questions/21486481/is-it-possible-to-view-git-diffs-using-a-gui-side-by-side-tool-on-mac}{these easy steps}:
-\begin{enumerate}[noitemsep]
-    \item Define FileMerge for the mergetool:
-    \begin{verbatim}
-git config --global merge.tool opendiff
-    \end{verbatim}
-    \item Define FileMerge for the difftool:
-    \begin{verbatim}
-git config --global diff.tool opendiff	
-    \end{verbatim}		
-    \item Suppress prompt at every comparison:
-    \begin{verbatim}
-git config --global diff.tool opendiff
-    \end{verbatim}	
-\end{enumerate}
-
-\subsection{TortoiseGit on PC}
-On PC, you might want use Tortoise following \href{https://gist.github.com/ellisda/25cdd92129c5b44406ab}{these easy steps}:
-\begin{enumerate}[noitemsep]
-  \item Download and install \href{https://tortoisegit.org/download}{TortoiseGit}.
-  \item Locate the global .gitconfig file in your home folder.
-  \item Add the following lines to the config file:
-  \begin{verbatim}
-[diff]
-  tool = TortoiseGitDiff	
-[difftool]
-  prompt = false
-[difftool "TortoiseGitDiff"]
-  cmd = \"C:/Program Files/Path/To/TortoiseGitMerge.exe\"
- -mine:"$REMOTE" -base:"$LOCAL" 
-
-[merge]
-  tool = TortoiseGitMerge	
-[mergetool "TortoiseGitMerge"]
-  cmd = \"C:/Program Files/Path/To/TortoiseGitMerge.exe\"
- -base:"$BASE" -mine:"$LOCAL" -theirs:"$REMOTE" 
- -merged:"$MERGED"
-  \end{verbatim}
-  You might have to adjust the executable path to match the actual location of the program.
-\end{enumerate}
-
-\section{General approach}
-You will most likely encounter a merge conflict, after calling git pull from the command line. You will recognize a merge conflict by a message similar to this one:
-\begin{verbatim}
-error: Your local changes to the following files would be 
-       overwritten by merge:
-       main.tex
-Please commit your changes or stash them before you merge. 
-Aborting
-\end{verbatim}
-We can solve it by the following simple steps:
-\begin{enumerate}[noitemsep]
-    \item Save the local changes:
-    \begin{verbatim}
-git stash
-    \end{verbatim}
-    \item  Download the latest changes from the remote repository:
-    \begin{verbatim}
-git pull
-    \end{verbatim}
-    \item Reload changes on the local copy:
-    \begin{verbatim}
-git stash pop
-    \end{verbatim}
-    \item Resolve conflict by calling the mergetool
-    \begin{verbatim}
-git mergetool
-    \end{verbatim}
-    \item Commit and push your changes to the repository.
-    \item Call the following command to get rid of all the intermediary .orig-files:
-    \begin{verbatim}
-git clean -f
-    \end{verbatim}
-\end{enumerate}
-
-If you have some merge conflicts although you did not really have any local changes (e.g. merging wrong branches locally and remotely), you can abort merging with the following command:
-\begin{verbatim}
-git merge --abort
-\end{verbatim}
-
+%% Diffs and conflicts %%
 \chapter{Branches}
-Branches can be helpful when we have a main project, from which we derive minor side projects. A branch can stand by itself or merged again with the main branch ($master$).
 
-\section{General commands}
+\input{branches.md}
 
-Make new branch:
-\begin{verbatim}
-git branch <branch-name>
-\end{verbatim}
-
-Delete an existing branch:
-\begin{verbatim}
-git branch -d <branch-name>
-\end{verbatim}
-
-Rename \href{https://multiplestates.wordpress.com/2015/02/05/rename-a-local-and-remote-branch-in-git/}{an existing branch}:
-\begin{enumerate}[noitemsep]
-    \item Rename the branch in your local repository:
-    \begin{verbatim}
-git branch -m <old-name> <new-name>
-    \end{verbatim}
-    \item Push the new branch to remote:
-    \begin{verbatim}
-git push origin :<old-name> <new-name>
-    \end{verbatim}
-    \item 
-    \begin{verbatim}
-git push origin -u <new-name>
-    \end{verbatim}
-\end{enumerate}
-
-The local branch is not tracking the remote branch anymore. When you use gitx or gitk to browse the repository, you will notice that the different branches have a label for the local and the corresponding remote branch. If a branch is not tracking its remote branch anymore, you will only see the local label. In this case, you will have to set the upstream tracking again, using the following command:
-\begin{verbatim}
-git branch --set-upstream-to=origins/pupsi pupsi
-\end{verbatim}
-
-\section{Recurring bugs}
-
-"Git push master fatal: You are not currently on a branch"
-Explanation \href{https://stackoverflow.com/questions/30471557/git-push-master-fatal-you-are-not-currently-on-a-branch/30471627}{here} or \href{https://stackoverflow.com/questions/4735556/git-not-currently-on-any-branch-is-there-an-easy-way-to-get-back-on-a-branch}{here}.
-General idea:
-\begin{verbatim}
-git branch <tmp-branch>
-git checkout master
-git merge <tmp-branch>
-git push origin master
-\end{verbatim}
-
+%% Tags %%
 \chapter{Tags}
-Tags can be added to highlight specific releases. The can represent milestones, versions, etc.
 
-\section{General commands}
-
-Make a new tag:
-\begin{enumerate}[noitemsep]
-    \item
-    \begin{verbatim}
-git tag <name>
-git tag <name> <short-sha>
-    \end{verbatim}
-    \item
-    \begin{verbatim}
-git push origin <name>
-git push origin --tags
-    \end{verbatim}
-\end{enumerate}
-
-Delete an existing tag:
-\begin{enumerate}[noitemsep]
-    \item 
-    \begin{verbatim}
-git tag -d <name>
-    \end{verbatim}
-    \item
-    \begin{verbatim}
-git push origin :refs/tags/<name>
-    \end{verbatim}
-\end{enumerate}
-
-Rename \href{https://stackoverflow.com/questions/1028649/how-do-you-rename-a-git-tag}{an existing tag}:
-\begin{enumerate}[noitemsep]
-    \item 
-    \begin{verbatim}
-git tag <new-name> <old-name>
-    \end{verbatim}
-    \item
-    \begin{verbatim}
-git tag -d <old-name>
-    \end{verbatim}
-    \item
-    \begin{verbatim}
-git push origin :refs/tags/<old-name>
-    \end{verbatim}
-    \item
-    \begin{verbatim}
-git push --tags
-    \end{verbatim}
-\end{enumerate}
-
-Remind all co-workers to run the following command:
-\begin{verbatim}
-git pull --prune --tags
-\end{verbatim}
+\input{tags.md}
 
 \end{document}
