Moved chapters to their own folders.

--- a/main.tex
+++ b/main.tex
@@ -31,26 +31,26 @@ This document contains some helpful commands that can be used in git.
 %% Setup %%
 \chapter{Setup}
 
-\input{setup.md}
+\input{chapters\setup.md}
 
 %% Maintaining the code %%
 \chapter{Maintaining the code}
 
-\input{maintenance.md}
+\input{chapters\maintenance.md}
 
 %% Diffs and conflicts %%
 \chapter{Diffs and conflicts}
 
-\input{merge.md}
+\input{chapters\merge.md}
 
 %% Diffs and conflicts %%
 \chapter{Branches}
 
-\input{branches.md}
+\input{chapters\branches.md}
 
 %% Tags %%
 \chapter{Tags}
 
-\input{tags.md}
+\input{chapters\tags.md}
 
 \end{document}
