Using correct syntax for \input{...}.

--- a/main.tex
+++ b/main.tex
@@ -31,26 +31,26 @@ This document contains some helpful commands that can be used in git.
 %% Setup %%
 \chapter{Setup}
 
-\input{chapters\setup.md}
+\input{chapters/setup.md}
 
 %% Maintaining the code %%
 \chapter{Maintaining the code}
 
-\input{chapters\maintenance.md}
+\input{chapters/maintenance.md}
 
 %% Diffs and conflicts %%
 \chapter{Diffs and conflicts}
 
-\input{chapters\merge.md}
+\input{chapters/merge.md}
 
 %% Diffs and conflicts %%
 \chapter{Branches}
 
-\input{chapters\branches.md}
+\input{chapters/branches.md}
 
 %% Tags %%
 \chapter{Tags}
 
-\input{chapters\tags.md}
+\input{chapters/tags.md}
 
 \end{document}
