How to solve "LF will be replaced by CRLF" warning.

--- a/main.tex
+++ b/main.tex
@@ -1,18 +1,10 @@
 \documentclass{report}
-\usepackage[utf8]{inputenc}
-\usepackage[english]{babel}
 
-\usepackage{microtype} % Better typography
+% The Variables %
+\input{media/variables}
 
-%\usepackage{libertine} % Using Linux Libertine fonts
-%\usepackage[T1]{fontenc}
-
-%\usepackage[raggedright]{titlesec} % Avoid hyphenation in headers, use also compact to remove white space around headers
-\usepackage{enumitem} % Remove space between items in enumerate
-
-\usepackage{hyperref} % Making links clickable.
-
-\usepackage{graphicx} % using resize boxes
+% The Packages %
+\input{media/packages}
 
 \title{Git Documentation}
 \author{Joschua Thomas Simon-Liedtke (Ph.D.)}
