--- a/media/variables.tex
+++ b/media/variables.tex
@@ -1,1 +1,4 @@
+\newcommand{\summaryPublisher}{Yoshi's Documentations}
+\newcommand{\summaryLocation}{Oslo}
+
 \newcommand{\documentationColor}{MidnightBlue}
