Pimped up the title page.

--- a/git-documentation.tex
+++ b/git-documentation.tex
@@ -1,7 +1,7 @@
 \documentclass{report}
 
 % Put author, summarizer and titles here so we know what this document is about.
-\newcommand{\docSummarizer}{Dr. Joschua Thomas\\
+\newcommand{\documenter}{Dr. Joschua Thomas\\
 Simon-Liedtke}
 \newcommand{\docTitle}{Git Documentation}
 
@@ -20,7 +20,7 @@ Simon-Liedtke}
 
 \begin{document}
 
-\maketitle
+\input{media/title}
 
 \chapter*{Meta}
 
