--- a/media/variables.tex
+++ b/media/variables.tex
@@ -1,4 +1,4 @@
-\newcommand{\summaryPublisher}{Yoshi's Documentations}
-\newcommand{\summaryLocation}{Oslo}
+\newcommand{\docPublisher}{Yoshi's Documentations}
+\newcommand{\docLocation}{Oslo}
 
-\newcommand{\documentationColor}{MidnightBlue}
+\newcommand{\docColor}{MidnightBlue}
