--- a/media/packages.tex
+++ b/media/packages.tex
@@ -12,8 +12,9 @@
 \usepackage[dvipsnames]{xcolor} % Enabling multiple colors by dvips names: https://en.wikibooks.org/wiki/LaTeX/Colors#The_68_standard_colors_known_to_dvips
 \hypersetup{
     colorlinks = true,
-    allcolors = \documentationColor,
+    allcolors = \docColor,
     %linkbordercolor = {white},
 } % Options for hyperref
 
 \usepackage{graphicx} % using resize boxes
+\usepackage{geometry} % Change page setup.
