--- a/media/packages.tex
+++ b/media/packages.tex
@@ -1,6 +1,8 @@
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 
+\usepackage{csquotes}
+
 \usepackage{microtype} % Better typography
 
 %\usepackage{libertine} % Using Linux Libertine fonts
